Move to table in followers route

--- a/assets/javascripts/discourse/components/activity-pub-follow-btn.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-follow-btn.hbs
@@ -1,10 +1,6 @@
-<div class="activity-pub-follow-btn">
-  <ActivityPubStatus
-     @model={{@category}}
-     @modelType="category"
-     @showTip={{true}}
-     @onClick={{this.showModal}}
-     @translatedLabel={{i18n 'discourse_activity_pub.follow.label'}}
-     @translatedTitle={{i18n 'discourse_activity_pub.follow.title' name=@category.name}}
-  />
-</div>
+<DButton
+  @class="activity-pub-follow-btn"
+  @action={{this.showModal}}
+  @translatedLabel={{i18n 'discourse_activity_pub.follow.label'}}
+  @translatedTitle={{i18n 'discourse_activity_pub.follow.title' name=@category.name}}
+/>
