--- a/assets/javascripts/discourse/components/activity-pub-category-banner.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-category-banner.hbs
@@ -1,8 +1,9 @@
 <div class="activity-pub-category-banner">
   {{#if @category}}
-    <ActivityPubStatus @model={{@category}} @modelType="category" @showTip={{true}} />
+    <ActivityPubStatus @model={{@category}} @modelType="category" />
     {{#unless this.site.mobileView}}
       <ActivityPubStatistics @category={{@category}} />
     {{/unless}}
+    <ActivityPubFollowBtn @category={{@category}} />
   {{/if}}
 </div>
