Only add navitem in AP categories

--- a/assets/javascripts/discourse/connectors/extra-nav-item/activity-pub-category-navigation.hbs
+++ b/assets/javascripts/discourse/connectors/extra-nav-item/activity-pub-category-navigation.hbs
@@ -1,1 +1,3 @@
-<ActivityPubNavItem @category={{this.category}} />
+{{#if this.category.activity_pub_enabled}}
+  <ActivityPubNavItem @category={{this.category}} />
+{{/if}}
