--- a/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-nav-item.hbs
@@ -1,8 +1,8 @@
 <a
   class={{this.classes}}
   href={{this.href}}
-  title={{i18n 'discourse_activity_pub.followers.description'}}
+  title={{i18n 'discourse_activity_pub.category_nav.description' category_name=@category.name}}
   >
   {{d-icon "discourse-activity-pub"}}
-  {{i18n 'discourse_activity_pub.followers.label'}}
+  {{i18n 'discourse_activity_pub.category_nav.label'}}
 </a>
