--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -73,6 +73,7 @@ div.activity-pub-status {
   }
 
   .activity-pub-handle {
+    display: inline-flex;
     margin: 4px 0;
   }
 }
@@ -89,7 +90,7 @@ div.activity-pub-status {
     align-items: stretch;
     border-radius: var(--d-border-radius);
     border: 1px solid var(--primary-low);
-    line-height: 30px;
+    line-height: 32px;
     overflow: hidden;
   }
 
@@ -216,43 +217,30 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-category-banner {
-  .desktop-view & {
-    display: flex;
-    align-items: center;
+.activity-pub-category-nav {
+  display: none !important;
+
+  &.visible {
+    display: flex !important;
   }
+}
+
+.activity-pub-category-banner {
   width: 100%;
   background: var(--primary-very-low);
   padding: 0.5em;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-  .activity-pub-category-banner-left {
-    padding-right: 1em;
+  .activity-pub-category-banner-side {
     display: flex;
-    align-items: center;
-    .desktop-view & {
-      max-width: 55%;
-    }
-    .d-icon {
-      color: var(--success);
-      width: 24px;
-      height: 24px;
-      margin: 0.5em;
-      margin-right: 0.75em;
-      .mobile-view & {
-        display: none;
-      }
-    }
+    gap: 0.5em;
   }
 
-  .activity-pub-category-banner-right {
-    margin-left: auto;
-    margin-top: 0.5em;
-    max-width: 45%;
-    .activity-pub-handle {
-      margin-bottom: 0.5em;
-      margin-right: 0.5em;
-    }
+  .fk-d-tooltip__trigger {
+    margin-left: 0.5em;
   }
 }
 
@@ -275,26 +263,14 @@ body.user-preferences-activity-pub-page {
   align-items: center;
 }
 
-.activity-pub-actor-statistics {
-  display: flex;
-  gap: 1em;
-
-  dt,
-  dd {
-    display: inline-flex;
-    align-items: center;
+@media all and (max-width: 1000px) {
+  .activity-pub-category-banner .activity-pub-handle,
+  .activity-pub-follower-user,
+  .activity-pub-followed-at {
+    display: none;
   }
-
-  dd {
-    padding: 0;
-    margin: 0 15px 0 0;
-    color: var(--primary);
-  }
-
-  dt {
-    color: var(--secondary-medium);
-    margin-right: 5px;
-    display: inline-block;
+  .directory-table__cell:first-child {
+    padding: unset;
   }
 }
 
