FEATURE: Improve federated category UX (#36)

--- a/assets/javascripts/discourse/components/activity-pub-status.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-status.hbs
@@ -1,4 +1,4 @@
-<div class="activity-pub-status {{this.statusClass}}" title={{this.translatedTitle}}>
+<div class={{this.classes}} title={{this.translatedTitle}} role="button">
   {{d-icon "discourse-activity-pub"}}
-  <span class="label" title={{this.translatedLabelTitle}}>{{this.translatedLabel}}</span>
+  <span class="label">{{this.translatedLabel}}</span>
 </div>
