--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -217,7 +217,7 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-category-nav {
+.activity-pub-category-route-nav {
   display: none !important;
 
   &.visible {
@@ -244,23 +244,29 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-followers {
-  grid-template-columns: minmax(13em, 3fr) repeat(2, 110px);
+.activity-pub-category-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.activity-pub-follower-actor {
+.activity-pub-actor {
+  display: flex;
   justify-content: flex-start;
 
-  .activity-pub-follower-actor-content {
+  .activity-pub-actor-content {
     margin-left: 1em;
     display: flex;
     flex-flow: column;
   }
 }
 
-.activity-pub-follower-user {
-  display: flex;
-  align-items: center;
+.activity-pub-followers {
+  grid-template-columns: minmax(13em, 3fr) repeat(2, 110px);
+}
+
+.activity-pub-follower-actor {
+  justify-content: flex-start;
 }
 
 @media all and (max-width: 1000px) {
@@ -283,7 +289,8 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-follow-domain-controls {
+.activity-pub-follow-domain-controls,
+.activity-pub-create-follow-find {
   display: flex;
   align-items: center;
 
@@ -292,10 +299,40 @@ body.user-preferences-activity-pub-page {
   }
 }
 
-.activity-pub-follow-domain-footer {
+.activity-pub-follow-domain-footer,
+.activity-pub-create-follow-find-footer {
   @include description-text;
+  min-height: 18px;
 
   &.error {
     color: var(--danger);
   }
+}
+
+.activity-pub-create-follow-find {
+  input {
+    width: 500px;
+  }
+}
+
+.activity-pub-create-follow-actor-container {
+  min-height: 80px;
+  padding: 1em;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  background-color: var(--primary-very-low);
+
+  &.no-actor {
+    color: var(--primary-medium);
+    font-size: var(--font-down-1);
+    justify-content: center;
+  }
+}
+
+.activity-pub-create-follow-actor {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
