--- a/assets/javascripts/discourse/templates/activity-pub-category.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-category.hbs
@@ -8,6 +8,6 @@
 
 <ActivityPubCategoryBanner @category={{this.model.category}} />
 
-<ActivityPubCategoryNav @category={{this.model.category}} />
+<ActivityPubCategoryNav @category={{this.model.category}} @follow={{route-action "follow"}} />
 
 {{outlet}}
