--- a/assets/javascripts/discourse/templates/activity-pub-category-followers.hbs
+++ b/assets/javascripts/discourse/templates/activity-pub-category-followers.hbs
@@ -4,25 +4,25 @@
   @action={{action "loadMore"}}
 >
   {{#if this.model.hasActors}}
-    <ResponsiveTable @className="activity-pub-followers">
+    <ResponsiveTable @className="activity-pub-follow-table followers">
       <:header>
         <TableHeaderToggle
           @field="actor"
-          @labelKey="discourse_activity_pub.follower.actor"
+          @labelKey="discourse_activity_pub.follow_table.actor"
           @automatic={{true}}
           @order={{this.order}}
           @asc={{this.asc}}
         />
         <TableHeaderToggle
           @field="user"
-          @labelKey="discourse_activity_pub.follower.user"
+          @labelKey="discourse_activity_pub.follow_table.user"
           @automatic={{true}}
           @order={{this.order}}
           @asc={{this.asc}}
         />
         <TableHeaderToggle
           @field="followed_at"
-          @labelKey="discourse_activity_pub.follower.followed_at"
+          @labelKey="discourse_activity_pub.follow_table.followed_at"
           @automatic={{true}}
           @order={{this.order}}
           @asc={{this.asc}}
@@ -30,11 +30,11 @@
       </:header>
       <:body>
       {{#each this.model.actors as |actor|}}
-        <div class="directory-table__row activity-pub-follower">
-          <div class="directory-table__cell activity-pub-follower-actor">
+        <div class="directory-table__row activity-pub-follow-table-row">
+          <div class="directory-table__cell activity-pub-follow-table-actor">
             <ActivityPubActor @actor={{actor}} />
           </div>
-          <div class="directory-table__cell activity-pub-follower-user">
+          <div class="directory-table__cell activity-pub-follow-table-user">
             {{#if actor.user}}
               <a
                 class="avatar"
@@ -45,7 +45,7 @@
               </a>
             {{/if}}
           </div>
-          <div class="directory-table__cell activity-pub-followed-at">
+          <div class="directory-table__cell activity-pub-follow-table-followed-at">
             {{bound-date actor.followed_at}}
           </div>
         </div>
