Fix failing tests

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -329,7 +329,7 @@ body.user-preferences-activity-pub-page {
 }
 
 .activity-pub-actor-follow-find {
-  input[type=text] {
+  input[type="text"] {
     width: 500px;
     max-width: 100vw;
   }
