DEV: Fix minor styling issues
Issue 1: Importing `common/components/buttons` makes those styles
re-apply above other overrides (for example, overrides from other
plugins).

Issue 2: Use core's `inline-form` for input/button alignment.

Issue 3: Add `ap-` to a mixin, to avoid potential future collisions.

--- a/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-follow-domain.hbs
@@ -1,6 +1,6 @@
 <div class="activity-pub-follow-domain">
-  <label>{{i18n 'discourse_activity_pub.follow.domain.label'}}</label>
-  <div class="activity-pub-follow-domain-controls">
+  <label>{{i18n "discourse_activity_pub.follow.domain.label"}}</label>
+  <div class="activity-pub-follow-domain-controls inline-form">
     <Input
       id="activity_pub_follow_domain_input"
       @value={{this.domain}}
@@ -20,9 +20,9 @@
     {{#if this.error}}
       {{this.error}}
     {{else if this.verifying}}
-      {{i18n 'discourse_activity_pub.follow.domain.verifying'}}
+      {{i18n "discourse_activity_pub.follow.domain.verifying"}}
     {{else}}
-      {{i18n 'discourse_activity_pub.follow.domain.description'}}
+      {{i18n "discourse_activity_pub.follow.domain.description"}}
     {{/if}}
   </div>
 </div>
