--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -334,6 +334,7 @@ body.user-preferences-activity-pub-page {
   input[type="text"] {
     width: 500px;
     max-width: 100vw;
+    margin-bottom: 0;
   }
 }
 
